--- a/css/ai.css
+++ b/css/ai.css
@@ -1434,7 +1434,7 @@ x:-o-prefocus {
 
 /*********** nav ***************/
 
-.nav {
+/*.nav {
     backface-visibility: hidden;
     -webkit-perspective: 1000;
     perspective: 1000;
@@ -1451,12 +1451,12 @@ x:-o-prefocus {
     overflow-y: auto;
     -webkit-transform: translate3d(100%, 0, 0);
     transform: translate3d(100%, 0, 0)
-}
-.nav.is-active {
+}*/
+/*.nav.is-active {
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0)
-}
-@media screen and (min-width: 65em) {
+}*/
+/*@media screen and (min-width: 65em) {
     .nav {
         background-color: transparent;
         overflow: visible;
@@ -1464,13 +1464,13 @@ x:-o-prefocus {
         -webkit-transform: translate3d(0, 0, 0);
         transform: translate3d(0, 0, 0);
         width: auto;
-        /*border-right: 1px solid #e5e5e5;*/
+        border-right: 1px solid #e5e5e5;
         display: block;
         height: 100%;
         right: 5.1428571429rem;
         padding-left: 12.0714285714rem
     }
-}
+}*/
 .nav__options {
     font-size: 1.5rem;
     -webkit-font-feature-settings: 'kern';
