Arreglada alineacion de caja 'otra_cuota' y hacemos que se esconda con el cambio de periodicidad

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -64,7 +64,9 @@ a:hover {
 }
 
 .capa_otra_cuota {
-  float: left;
+  /*float: left;*/
+  margin-top: 45px;
+  margin-left: -5px;
 }
 
 .otra_cuota {
